# vibecut

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  test_orchestrator.py
apps/desktop/: package.json  pnpm-lock.yaml  tsconfig.electron.json  tsconfig.preload.json  vite.config.ts
apps/desktop/dist-electron/: electron.js  preload.cjs
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src/components/: BackendStatus.tsx  CreateProjectModal.tsx  Editor.tsx  ExportModal.tsx  MediaLibrary.tsx  MediaSidebar.tsx  OrchestratorPanel.tsx  (+6 more)
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/daemon/src/api/: export.rs  generate.rs  jobs.rs  media.rs  mod.rs  orchestrator.rs  orchestrator_helper.rs  projects.rs  style.rs  timeline.rs
crates/daemon/src/db/: migrations.rs  mod.rs
crates/daemon/src/embeddings/: mod.rs
crates/daemon/src/jobs/: build_segments.rs  embeddings.rs  enrichment.rs  metadata.rs  mod.rs  processor.rs  transcribe.rs  twelvelabs_index.rs  vision.rs
crates/daemon/src/llm/: mod.rs
crates/daemon/src/media/: ffmpeg.rs  mod.rs
crates/daemon/src/orchestrator/: agent.rs  ensure.rs  events.rs  mod.rs  state.rs
crates/daemon/src/planner/: mod.rs
crates/daemon/src/retrieval/: local_backend.rs  mod.rs  twelvelabs_backend.rs
crates/daemon/src/twelvelabs/: mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: compiler.rs  diff.rs  lib.rs  ops.rs  render.rs  timeline.rs
ml/service/: README.md  install.sh  main.py  requirements.txt
shared/schemas/: edit_plan.json  segment_features.json  style_profile.json  timeline.json
(+8 files in other folders)
