[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
bytes = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
engine = { path = "../engine" }
